Created changes in admin folder

--- a/admin/src/pages/newUser/newUser.scss
+++ b/admin/src/pages/newUser/newUser.scss
@@ -44,7 +44,7 @@
   .newUserButton {
     width: 200px;
     border: none;
-    background-color: darkblue;
+    background-color: purple;
     color: white;
     padding: 7px 10px;
     font-weight: 600;
@@ -55,3 +55,4 @@
 }
 
 }
+
