--- a/admin/src/pages/newMovie/newMovie.scss
+++ b/admin/src/pages/newMovie/newMovie.scss
@@ -8,12 +8,15 @@
 
   .addProductForm {
     margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
 
     .addProductItem {
       width: 250px;
       display: flex;
       flex-direction: column;
       margin-bottom: 10px;
+      padding: 20px;
 
       > label {
         color: gray;
@@ -37,14 +40,16 @@
       }
     }
     .addProductButton {
+      height: 30px;
       margin-top: 10px;
       padding: 7px 10px;
       border: none;
       border-radius: 10px;
-      background-color: purple;
+      background-color: darkblue;
       color: white;
       font-weight: 600;
       cursor: pointer;
+      align-self: center;
     }
   }
 }
